Добавил файлы в репозиторий

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
   <body>
 
+    <!-- Это изменение я внес после клонирования -->
+
+    <div>новый элемент 1</div>
+
     <!-- title and navigation -->
     
     <header class="header">
