--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
       </article>
 
-      <div class="Hover-button"><button class="button">hover me</button></div>
+      <div class="hover-button"><button class="button">hover me</button></div>
 
     </main>
 
